syntax = "proto2";
package douyin.relation;
option go_package = ".;relation";

import "protocol_common.proto";

message douyin_relation_follower_list_request {
  required int64 user_id = 1; // 用户id
  required string token = 2; // 用户鉴权token
}

message douyin_relation_follower_list_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated User user_list = 3; // 用户列表
}

